help to udpate database by sql

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,13 +7,13 @@
    <div class="row">
 
       <div class="image">
-         <img src="images/about-img.svg" alt="">
+         <img src="/images/about-img.svg" alt="">
       </div>
 
       <div class="content">
          <h3>why choose us?</h3>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque nobis distinctio, nisi consequatur ad sequi, rem odit fugiat assumenda eligendi iure aut sunt ratione, tempore porro expedita quisquam.</p>
-         <a href="courses.html" class="inline-btn">our courses</a>
+         <a href="/courses" class="inline-btn">our courses</a>
       </div>
 
    </div>
@@ -69,7 +69,7 @@
       <div class="box">
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo fugiat, quaerat voluptate odio consectetur assumenda fugit maxime unde at ex?</p>
          <div class="user">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="/images/pic-2.jpg" alt="">
             <div>
                <h3>john deo</h3>
                <div class="stars">
@@ -86,7 +86,7 @@
       <div class="box">
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo fugiat, quaerat voluptate odio consectetur assumenda fugit maxime unde at ex?</p>
          <div class="user">
-            <img src="images/pic-3.jpg" alt="">
+            <img src="/images/pic-3.jpg" alt="">
             <div>
                <h3>john deo</h3>
                <div class="stars">
@@ -103,7 +103,7 @@
       <div class="box">
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo fugiat, quaerat voluptate odio consectetur assumenda fugit maxime unde at ex?</p>
          <div class="user">
-            <img src="images/pic-4.jpg" alt="">
+            <img src="/images/pic-4.jpg" alt="">
             <div>
                <h3>john deo</h3>
                <div class="stars">
@@ -120,7 +120,7 @@
       <div class="box">
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo fugiat, quaerat voluptate odio consectetur assumenda fugit maxime unde at ex?</p>
          <div class="user">
-            <img src="images/pic-5.jpg" alt="">
+            <img src="/images/pic-5.jpg" alt="">
             <div>
                <h3>john deo</h3>
                <div class="stars">
@@ -137,7 +137,7 @@
       <div class="box">
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo fugiat, quaerat voluptate odio consectetur assumenda fugit maxime unde at ex?</p>
          <div class="user">
-            <img src="images/pic-6.jpg" alt="">
+            <img src="/images/pic-6.jpg" alt="">
             <div>
                <h3>john deo</h3>
                <div class="stars">
@@ -154,7 +154,7 @@
       <div class="box">
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo fugiat, quaerat voluptate odio consectetur assumenda fugit maxime unde at ex?</p>
          <div class="user">
-            <img src="images/pic-7.jpg" alt="">
+            <img src="/images/pic-7.jpg" alt="">
             <div>
                <h3>john deo</h3>
                <div class="stars">
