--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -15,34 +15,25 @@
       <div class="box">
          <h3><%= total_content %></h3>
          <p>total contents</p>
-         <a href="/admin/add_content" class="btn">add new content</a>
+         <a href="/admin/videos/add" class="btn">add new content</a>
       </div>
 
       <div class="box">
          <h3><%= total_playlist %></h3>
          <p>total playlists</p>
-         <a href="/admin/add_playlist" class="btn">add new playlist</a>
+         <a href="/admin/playlists/add" class="btn">add new playlist</a>
       </div>
 
       <div class="box">
          <h3><%= total_content %></h3>
          <p>total likes</p>
-         <a href="/admin/contents" class="btn">view contents</a>
+         <a href="/admin/videos" class="btn">view contents</a>
       </div>
 
       <div class="box">
          <h3><%= total_content %></h3>
          <p>total comments</p>
          <a href="/admin/comments" class="btn">view comments</a>
-      </div>
-
-      <div class="box">
-         <h3>quick select</h3>
-         <p>login or register</p>
-         <div class="flex-btn">
-            <a href="/admin/login" class="option-btn">login</a>
-            <a href="/admin/register" class="option-btn">register</a>
-         </div>
       </div>
 
    </div>
