--- a/views/admin/layout/admin_header.ejs
+++ b/views/admin/layout/admin_header.ejs
@@ -28,9 +28,9 @@
 
       <a href="/admin/dashboard" class="logo">Admin.</a>
 
-      <form action="/admin/search_page" method="post" class="search-form">
+      <form action="/admin/search_page" method="get" class="search-form">
          <input type="text" name="search" placeholder="search here..." required maxlength="100">
-         <button type="submit" class="fas fa-search" name="search_btn"></button>
+         <button type="submit" class="fas fa-search"></button>
       </form>
 
       <div class="icons">
