--- a/views/admin/profile/index.ejs
+++ b/views/admin/profile/index.ejs
@@ -20,12 +20,12 @@
          <div class="box">
             <span><%= total_content %></span>
             <p>total videos</p>
-            <a href="/admin/contents" class="btn">view contents</a>
+            <a href="/admin/videos" class="btn">view contents</a>
          </div>
          <div class="box">
             <span><%= total_like %></span>
             <p>total likes</p>
-            <a href="/admin/contents" class="btn">view contents</a>
+            <a href="/admin/videos" class="btn">view contents</a>
          </div>
          <div class="box">
             <span><%= total_comment %></span>
