--- a/views/components/user_header.ejs
+++ b/views/components/user_header.ejs
@@ -11,9 +11,9 @@
 
       <a href="/home" class="logo">Educa.</a>
 
-      <form action="/search_course" method="post" class="search-form">
-         <input type="text" name="search_course" placeholder="search courses..." required maxlength="100">
-         <button type="submit" class="fas fa-search" name="search_course_btn"></button>
+      <form action="/search_course" method="get" class="search-form">
+         <input type="text" name="search" placeholder="search courses..." required maxlength="100">
+         <button type="submit" class="fas fa-search"></button>
       </form>
 
       <div class="icons">
