--- a/views/admin/videos/view.ejs
+++ b/views/admin/videos/view.ejs
@@ -37,8 +37,6 @@
    <div class="show-comments">
       <% if (comments?.length > 0) { %>
       <% comments.forEach(comment => { %>
-       
-      <% }) %>
          <div class="box">
             <div class="user">
                <img src="/uploaded_files/<%= comment.user?.image  %>" alt="">
@@ -48,15 +46,15 @@
                </div>
             </div>
             <p class="text"><%= comment.comment  %></p>
-            <form action="" method="post" class="flex-btn">
-               <input type="hidden" name="comment_id" value="<%= comment.id %>">
-               <button type="submit" name="delete_comment" class="inline-delete-btn" onclick="return confirm('delete this comment?');">delete comment</button>
-            </form>
+            <div  class="flex-btn">
+               <a href="/admin/comments/delete/<%= comment.id  %>" class="inline-delete-btn" onclick="return confirm('delete this comment?');">delete comment</a>
+            </d>
          </div>
+      <% }) %>
       <% } else { %>
       <p class="empty">no comments added yet!</p>
       <% } %>
-      </div>
+   </div>
    
 </section>
 
